--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "dev": "next dev" 
+    "dev": "next dev"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +19,7 @@
     "npm": "^6.9.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "semantic-ui-react": "^0.86.0",
     "solc": "^0.5.6",
     "truffle-hdwallet-provider": "^1.0.5",
     "web3": "^1.0.0-beta.37"
