--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "npm": "^6.9.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.86.0",
     "solc": "^0.5.6",
     "truffle-hdwallet-provider": "^1.0.5",
